<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_courses"
            android:title="@string/courses" />
        <item
            android:id="@+id/nav_my_courses"
            android:icon="@drawable/ic_mycourses"
            android:title="@string/my_courses" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_favourites"
            android:title="@string/favourites" />
        <item
            android:id="@+id/nav_create_course"
            android:icon="@drawable/ic_create_course"
            android:title="@string/create_course_nav" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            />
    </group>

</menu>