<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:name="app.rxsongbrowsertrials.ui.player.PlayerToggleFragment"
    android:background="@drawable/filter_bg"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:textAlignment="textStart"
        android:text="@string/filters"
        android:textStyle="bold"
        android:textColor="@color/primary_dark_purple"
        android:textSize="@dimen/toolbar_title"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="@dimen/padding"
        android:background="@color/grey_purple" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_menu"
        android:textAlignment="textStart"
        android:text="@string/price_range"
        android:textStyle="bold"
        android:textColor="@color/grey_purple"
        android:textSize="@dimen/filter_field"/>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/price_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:values="@array/initial_slider_values"
        android:valueFrom="0.0"
        android:valueTo="6000"
        android:stepSize="10.0"
        app:labelBehavior="floating"
        app:tickColor="@color/primary_dark_purple"
        app:tickColorActive="@color/primary_dark_purple"
        app:tickColorInactive="@color/primary_dark_purple"
        app:haloColor="@color/secondary_pink"
        app:thumbColor="@color/primary_dark_purple"
        app:thumbStrokeColor="@color/primary_dark_purple"
        app:trackColor="@color/primary_dark_purple"
        style="@style/mySlider"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/category"
            android:textAlignment="textStart"
            android:textColor="@color/grey_purple"
            android:textSize="@dimen/filter_field"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/category_spn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.75"
            android:popupBackground="@color/secondary_pink"

            android:entries="@array/categories_filter"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_menu"
        android:textAlignment="textStart"
        android:text="@string/difficulty"
        android:textStyle="bold"
        android:textColor="@color/grey_purple"
        android:textSize="@dimen/filter_field"/>

    <LinearLayout
        android:id="@+id/filter_difficulty_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal"
        android:weightSum="1">

        <CheckBox
            android:id="@+id/beginner_checkbox"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.30"
            android:buttonTint="@color/secondary_pink"
            android:text="@string/beginner"
            android:textColor="@color/primary_dark_purple"
            android:textStyle="bold"
            android:textSize="@dimen/card_view_enroll"/>

        <CheckBox
            android:id="@+id/intermediate_checkbox"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.36"
            android:buttonTint="@color/secondary_pink"
            android:text="@string/intermediate"
            android:textColor="@color/primary_dark_purple"
            android:textStyle="bold"
            android:textSize="@dimen/card_view_enroll"/>

        <CheckBox
            android:id="@+id/advanced_checkbox"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.33"
            android:buttonTint="@color/secondary_pink"
            android:text="@string/advanced"
            android:textColor="@color/primary_dark_purple"
            android:textStyle="bold"
            android:textSize="@dimen/card_view_enroll"/>


    </LinearLayout>

        <Switch
            android:id="@+id/enroll_switch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/padding"
            android:text="@string/open_to_enroll"
            android:textColor="@color/grey_purple"
            android:textSize="@dimen/filter_field"
            android:textStyle="bold"
            android:theme="@style/mySwitch"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginBottom="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            android:background="@drawable/button_pink"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/apply_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginBottom="@dimen/padding"
            android:layout_marginStart="@dimen/padding"
            android:background="@drawable/button_pink"
            android:text="@string/apply"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>